@@ -10,131 +10,119 @@
     </i2o:protocol>
 
 <!-- BU / BROKER CONTEXT -->
-  <xc:Context url="http://cmsroc3.fnal.gov:40000">
+  <xc:Context url="http://cmsroc7.fnal.gov:50000">
       <xc:Endpoint protocol="tcp" service="i2o"
-          hostname="cmsroc3.fnal.gov" port="30001" network="tcp1"/>
+          hostname="cmsroc7.fnal.gov" port="30001" network="tcp1"/>
 
     <!-- Playback Builder Unit -->
     <xc:Application class="evf::BU" id="24" instance="0" network="tcp1">
     </xc:Application>
-    <xc:Module>${CMSSW_BASE}/lib/slc3_ia32_gcc323/libEventFilterAutoBU.so</xc:Module>
+    <xc:Module>${CMSSW_BASE}/lib/slc4_ia32_gcc345/libEventFilterAutoBU.so</xc:Module>
 
     <!-- FUResourceBroker -->
     <xc:Application class="evf::FUResourceBroker" id="25" instance="0" network="tcp1">
       <properties xmlns="urn:xdaq-application:evf::FUResourceBroker" xsi:type="soapenc:Struct">
         <buClassName  xsi:type="xsd:string"     >evf::BU</buClassName>
+        <nbRawCells xsi:type="xsd:unsignedInt">4</nbRawCells>
+        <nbRecoCells xsi:type="xsd:unsignedInt">4</nbRecoCells>
+        <nbDqmCells xsi:type="xsd:unsignedInt">4</nbDqmCells>
+        <rawCellSize xsi:type="xsd:unsignedInt">0x200000</rawCellSize>
+        <recoCellSize xsi:type="xsd:unsignedInt">0x200000</recoCellSize>
+        <dqmCellSize xsi:type="xsd:unsignedInt">0x200000</dqmCellSize>
       </properties>
     </xc:Application>
-    <xc:Module>${CMSSW_BASE}/lib/slc3_ia32_gcc323/libEventFilterResourceBroker.so</xc:Module>
+    <xc:Module>${CMSSW_BASE}/lib/slc4_ia32_gcc345/libEventFilterResourceBroker.so</xc:Module>
 
-       <xc:Application class="PeerTransportTCP" id="26" network="tcp1">
-           <properties xmlns="urn:xdaq-application:PeerTransportTCP" xsi:type="soapenc:Struct">
-              <autoSize xsi:type="xsd:boolean">true</autoSize>
-              <maxPacketSize xsi:type="xsd:unsignedInt">262144</maxPacketSize>
-           </properties>
-       </xc:Application>
-       <xc:Module>$XDAQ_ROOT/lib/libpttcp.so</xc:Module>
+    <xc:Application class="pt::tcp::PeerTransportTCP" id="26" network="tcp1">
+      <properties xmlns="urn:xdaq-application:PeerTransportTCP" xsi:type="soapenc:Struct">
+        <autoSize xsi:type="xsd:boolean">true</autoSize>
+        <maxPacketSize xsi:type="xsd:unsignedInt">262144</maxPacketSize>
+      </properties>
+    </xc:Application>
+    <xc:Module>${XDAQ_ROOT}/lib/libpttcp.so</xc:Module>
+
   </xc:Context>
 
 <!-- FUEventProcessor context -->
-   <xc:Context url="http://cmsroc3.fnal.gov:1972">
+  <xc:Context url="http://cmsroc7.fnal.gov:50001">
 
-        <xc:Application class="evf::FUEventProcessor" id="21" instance="0" network="local">
-           <properties xmlns="urn:xdaq-application:FUEventProcessor" xsi:type="soapenc:Struct">
-
-                    <parameterSet xsi:type="xsd:string">file:/uscms/home/cheung/work/xml2/fu_testshm.cfi</parameterSet>
-                    <collReconnSec xsi:type="xsd:integer">-1</collReconnSec>
-                  </properties>
-
-                </xc:Application>
-       <xc:Module>$CMSSW_BASE/lib/slc3_ia32_gcc323/libEventFilterProcessor.so</xc:Module>
-   </xc:Context>
-
-<!-- StorageManager context -->
-    <!-- Declare a context that contain applcation -->
-    <xc:Context id = "1" url="http://cmsroc2.fnal.gov:1972">
-       <xc:Endpoint protocol="tcp" service="i2o"
-          hostname="cmsroc2.fnal.gov" port="60000" network="tcp1"/>
-
-      <!--- Setting up the XDAQ monitor -->
-      <xc:Application class="Monitor" id="66"  network="local">
-        <properties xmlns="urn:xdaq-application:Monitor" xsi:type="soapenc:Struct">
-          <inprofile xsi:type="soapenc:Array" soapenc:arrayType="xsd:ur-type[1]">
-            <item xsi:type="xsd:string" soapenc:position="[0]">$CMSSW_BASE/src/EventFilter/StorageManager/test/sm.flash</item>
-          </inprofile>
-          <useDiscovery xsi:type="xsd:boolean">false</useDiscovery>
-        </properties>
-      </xc:Application>
-      <xc:Module>$XDAQ_ROOT/lib/libmonitor.so</xc:Module>
-
-       <!-- Declare a StorageManager application -->
-       <xc:Application class="StorageManager" id="29" instance="0" network="tcp1">
-              <properties xmlns="urn:xdaq-application:StorageManager" xsi:type="soapenc:Struct">
-                    <STparameterSet     xsi:type="xsd:string">file:/uscms/home/cheung/work/xml2/sm_stage1.cfi</STparameterSet>
-                    <runNumber          xsi:type="xsd:unsignedInt">0</runNumber>
-                    <maxESEventRate     xsi:type="xsd:double">1.0</maxESEventRate>
-                    <DQMmaxESEventRate  xsi:type="xsd:double">1.0</DQMmaxESEventRate>
-                    <nLogicalDisk       xsi:type="xsd:integer">0</nLogicalDisk> 
-                    <fileCatalog        xsi:type="xsd:string">summaryCatalog.txt</fileCatalog> 
-		    <closeFileScript    xsi:type="xsd:string">$CMSSW_BASE/src/EventFilter/StorageManager/scripts/perl/dummy.pl</closeFileScript>
-		    <notifyTier0Script  xsi:type="xsd:string">$CMSSW_BASE/src/EventFilter/StorageManager/scripts/perl/dummy.pl</notifyTier0Script>
-		    <insertFileScript   xsi:type="xsd:string">$CMSSW_BASE/src/EventFilter/StorageManager/scripts/perl/dummy.pl</insertFileScript>
-                    <pushMode2Proxy     xsi:type="xsd:boolean">true</pushMode2Proxy>
-                    <collateDQM         xsi:type="xsd:boolean">false</collateDQM>
-                    <archiveDQM         xsi:type="xsd:boolean">false</archiveDQM>
-                    <filePrefixDQM      xsi:type="xsd:string">/scratch2/cheung/dqm</filePrefixDQM>
-                    <purgeTimeDQM       xsi:type="xsd:integer">20</purgeTimeDQM>
-                    <readyTimeDQM       xsi:type="xsd:integer">10</readyTimeDQM>
-                    <useCompressionDQM  xsi:type="xsd:boolean">true</useCompressionDQM>
-                    <compressionLevelDQM xsi:type="xsd:integer">1</compressionLevelDQM>
-               </properties>
-       </xc:Application>
-
-       <xc:Application class="PeerTransportTCP" id="31" network="tcp1">
-           <properties xmlns="urn:xdaq-application:PeerTransportTCP" xsi:type="soapenc:Struct">
-              <autoSize xsi:type="xsd:boolean">true</autoSize>
-              <maxPacketSize xsi:type="xsd:unsignedInt">262144</maxPacketSize>
-           </properties>
-       </xc:Application>
-
-       <xc:Module>$XDAQ_ROOT/lib/libpttcp.so</xc:Module>
-       <xc:Module>$CMSSW_BASE/lib/slc3_ia32_gcc323/libEventFilterStorageManager.so</xc:Module>
-       </xc:Context>
-
-<!-- SMProxyServer context -->
-    <!-- Declare a context that contain applcation -->
-  <xc:Context id = "1" url="http://cmsroc7.fnal.gov:1972">
-
-    <!--- Setting up the XDAQ monitor -->
-    <xc:Application class="Monitor" id="66"  network="local">
-      <properties xmlns="urn:xdaq-application:Monitor" xsi:type="soapenc:Struct">
-        <inprofile xsi:type="soapenc:Array" soapenc:arrayType="xsd:ur-type[1]">
-          <item xsi:type="xsd:string" soapenc:position="[0]">$CMSSW_BASE/src/EventFilter/SMProxyServer/test/smproxy.flash</item>
-        </inprofile>
-        <useDiscovery xsi:type="xsd:boolean">false</useDiscovery>
+    <xc:Application class="evf::FUEventProcessor" id="21" instance="0" network="local">
+      <properties xmlns="urn:xdaq-application:FUEventProcessor" xsi:type="soapenc:Struct">
+        <parameterSet xsi:type="xsd:string">file:/uscms/home/cheung/work/xml2/fu_pass.cfi</parameterSet>
+        <collReconnSec xsi:type="xsd:integer">-1</collReconnSec>
       </properties>
     </xc:Application>
-    <xc:Module>$XDAQ_ROOT/lib/libmonitor.so</xc:Module>
+    <xc:Module>$CMSSW_BASE/lib/slc4_ia32_gcc345/libEventFilterProcessor.so</xc:Module>
 
-  <!-- Declare a SMProxyServer application -->
+  </xc:Context>
+
+<!-- StorageManager context -->
+  <!-- Declare a context that contains the application -->
+  <xc:Context id = "1" url="http://cmsroc7.fnal.gov:50002">
+    <xc:Endpoint protocol="tcp" service="i2o"
+      hostname="cmsroc7.fnal.gov" port="60000" network="tcp1"/>
+
+    <!-- Declare a StorageManager application -->
+    <xc:Application class="StorageManager" id="29" instance="0" network="tcp1">
+      <properties xmlns="urn:xdaq-application:StorageManager" xsi:type="soapenc:Struct">
+        <STparameterSet     xsi:type="xsd:string">file:/uscms/home/cheung/work/xml2/sm_stage1.cfi</STparameterSet>
+        <runNumber          xsi:type="xsd:unsignedInt">0</runNumber>
+        <maxESEventRate     xsi:type="xsd:double">1.0</maxESEventRate>
+        <DQMmaxESEventRate  xsi:type="xsd:double">1.0</DQMmaxESEventRate>
+        <nLogicalDisk       xsi:type="xsd:integer">0</nLogicalDisk> 
+        <fileName           xsi:type="xsd:string">storageManager</fileName> 
+        <filePath           xsi:type="xsd:string">/scratch2/cheung</filePath> 
+        <mailboxPath        xsi:type="xsd:string">/scratch2/cheung/mbox</mailboxPath> 
+        <setupLabel         xsi:type="xsd:string">mtcc</setupLabel> 
+        <highWaterMark      xsi:type="xsd:double">0.9</highWaterMark>
+        <lumiSectionTimeOut xsi:type="xsd:double">10.0</lumiSectionTimeOut>
+        <fileCatalog        xsi:type="xsd:string">summaryCatalog.txt</fileCatalog> 
+	<closeFileScript    xsi:type="xsd:string">/uscms/home/cheung/work/CMSSW_1_7_0_pre5/src/EventFilter/StorageManager/scripts/perl/dummy.pl</closeFileScript>
+        <notifyTier0Script  xsi:type="xsd:string">/uscms/home/cheung/work/CMSSW_1_7_0_pre5/src/EventFilter/StorageManager/scripts/perl/dummy.pl</notifyTier0Script>
+        <insertFileScript   xsi:type="xsd:string">/uscms/home/cheung/work/CMSSW_1_7_0_pre5/src/EventFilter/StorageManager/scripts/perl/dummy.pl</insertFileScript>
+        <pushMode2Proxy     xsi:type="xsd:boolean">true</pushMode2Proxy>
+        <collateDQM         xsi:type="xsd:boolean">false</collateDQM>
+        <archiveDQM         xsi:type="xsd:boolean">false</archiveDQM>
+        <filePrefixDQM      xsi:type="xsd:string">/scratch2/cheung/dqm</filePrefixDQM>
+        <purgeTimeDQM       xsi:type="xsd:integer">120</purgeTimeDQM>
+        <readyTimeDQM       xsi:type="xsd:integer">10</readyTimeDQM>
+        <useCompressionDQM  xsi:type="xsd:boolean">true</useCompressionDQM>
+        <compressionLevelDQM xsi:type="xsd:integer">1</compressionLevelDQM>
+      </properties>
+    </xc:Application>
+    <xc:Module>$CMSSW_BASE/lib/slc4_ia32_gcc345/libEventFilterStorageManager.so</xc:Module>
+
+    <xc:Application class="pt::tcp::PeerTransportTCP" id="31" network="tcp1">
+      <properties xmlns="urn:xdaq-application:PeerTransportTCP" xsi:type="soapenc:Struct">
+        <autoSize xsi:type="xsd:boolean">true</autoSize>
+        <maxPacketSize xsi:type="xsd:unsignedInt">262144</maxPacketSize>
+      </properties>
+    </xc:Application>
+    <xc:Module>${XDAQ_ROOT}/lib/libpttcp.so</xc:Module>
+
+  </xc:Context>
+
+<!-- SMProxyServer context -->
+  <!-- Declare a context that contains the application -->
+  <xc:Context id = "1" url="http://cmsroc7.fnal.gov:50003">
+
+    <!-- Declare a SMProxyServer application -->
     <xc:Application class="SMProxyServer" id="30" instance="0" network="local">
       <properties xmlns="urn:xdaq-application:SMProxyServer" xsi:type="soapenc:Struct">
-        <SMRegistrationList xsi:type="soapenc:Array" soapenc:arrayType="xsd:ur-type[2]">
-          <item soapenc:position="[0]" xsi:type="xsd:string">http://cmsroc2.fnal.gov:1972/urn:xdaq-application:lid=29</item>
-          <item soapenc:position="[1]" xsi:type="xsd:string">http://cmsroc3.fnal.gov:1972/urn:xdaq-application:lid=29</item>
+        <SMRegistrationList xsi:type="soapenc:Array" soapenc:arrayType="xsd:ur-type[1]">
+          <item soapenc:position="[0]" xsi:type="xsd:string">http://cmsroc7.fnal.gov:50002/urn:xdaq-application:lid=29</item>
         </SMRegistrationList>
         <collateDQM         xsi:type="xsd:boolean">false</collateDQM>
         <archiveDQM         xsi:type="xsd:boolean">false</archiveDQM>
         <filePrefixDQM      xsi:type="xsd:string">/scratch2/cheung/dqm</filePrefixDQM>
-        <purgeTimeDQM       xsi:type="xsd:integer">20</purgeTimeDQM>
+        <purgeTimeDQM       xsi:type="xsd:integer">120</purgeTimeDQM>
         <readyTimeDQM       xsi:type="xsd:integer">10</readyTimeDQM>
         <useCompressionDQM  xsi:type="xsd:boolean">true</useCompressionDQM>
         <compressionLevelDQM xsi:type="xsd:integer">1</compressionLevelDQM>
       </properties>
     </xc:Application>
 
-     <xc:Module>$XDAQ_ROOT/lib/libpttcp.so</xc:Module>
-     <xc:Module>$CMSSW_BASE/lib/slc3_ia32_gcc323/libEventFilterSMProxyServer.so</xc:Module>
-     </xc:Context>
+    <xc:Module>$CMSSW_BASE/lib/slc4_ia32_gcc345/libEventFilterSMProxyServer.so</xc:Module>
+    </xc:Context>
 
 </xc:Partition>
